--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,16 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-      package="com.cattailsw.nanidroid"
-      android:versionCode="1"
-      android:versionName="1.0">
-    <application android:label="@string/app_name" android:icon="@drawable/ic_launcher">
-        <activity android:name="Nanidroid"
-                  android:label="@string/app_name">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-    </application>
-<uses-permission android:name="android.permission.INTERNET"></uses-permission>
+  package="com.cattailsw.nanidroid"
+  android:versionCode="1"
+  android:versionName="1.0">
+  <application android:label="@string/app_name" android:icon="@drawable/ic_launcher">
+    <activity android:name="Nanidroid"
+      android:label="@string/app_name">
+      <intent-filter>
+	<action android:name="android.intent.action.MAIN" />
+	<category android:name="android.intent.category.LAUNCHER" />
+      </intent-filter>
+      <intent-filter >
+	<action android:name="android.intent.action.VIEW" />
+	<category android:name="android.intent.category.DEFAULT" />
+	<data android:host="*" />
+	<data android:scheme="file" />
+	<data android:pathPattern=".*\\.nar" />
+	<data android:scheme="https" />
+	<data android:scheme="http" />
+	<data android:mimeType="application/x-zip" />
+	<data android:mimeType="application/zip" />
+      </intent-filter>
+
+    </activity>
+    <service android:name="HeadLineSensorService"></service>
+  </application>
+  <uses-permission android:name="android.permission.INTERNET"></uses-permission>
 </manifest>
