--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -24,4 +24,5 @@
     <service android:name=".NanidroidService"></service>
   </application>
   <uses-permission android:name="android.permission.INTERNET"></uses-permission>
+  <uses-sdk android:minSdkVersion="8" android:targetSdkVersion="8" />
 </manifest>
