--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -5,7 +5,9 @@
   android:versionName="1.0">
   <application android:label="@string/app_name" android:icon="@drawable/ic_launcher">
     <activity android:name="Nanidroid"
-      android:label="@string/app_name">
+      android:label="@string/app_name"
+      android:theme="@android:style/Theme.Translucent"
+      >
       <intent-filter>
 	<action android:name="android.intent.action.MAIN" />
 	<category android:name="android.intent.category.LAUNCHER" />
@@ -24,5 +26,7 @@
     <service android:name=".NanidroidService"></service>
   </application>
   <uses-permission android:name="android.permission.INTERNET"></uses-permission>
+  <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
   <uses-sdk android:minSdkVersion="8" android:targetSdkVersion="8" />
 </manifest>
