--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -6,7 +6,7 @@
   <application android:label="@string/app_name" android:icon="@drawable/ic_launcher">
     <activity android:name="Nanidroid"
       android:label="@string/app_name"
-      android:theme="@android:style/Theme.Translucent"
+      android:launchMode="singleTop"
       >
       <intent-filter>
 	<action android:name="android.intent.action.MAIN" />
