--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -3,7 +3,10 @@
   package="com.cattailsw.nanidroid"
   android:versionCode="1"
   android:versionName="1.0">
-  <application android:label="@string/app_name" android:icon="@drawable/ic_launcher">
+  <application android:label="@string/app_name" 
+    android:icon="@drawable/ic_launcher"
+    android:debuggable="true"
+    >
     <activity android:name="Nanidroid"
       android:label="@string/app_name"
       android:launchMode="singleTop"
@@ -28,5 +31,5 @@
   <uses-permission android:name="android.permission.INTERNET"></uses-permission>
   <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
-  <uses-sdk android:minSdkVersion="8" android:targetSdkVersion="8" />
+  <uses-sdk android:minSdkVersion="9" android:targetSdkVersion="9" />
 </manifest>
