--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -10,7 +10,7 @@
     <activity android:name="Nanidroid"
       android:label="@string/app_name"
       android:launchMode="singleTop"
-      >
+      android:theme="@android:style/Theme.NoTitleBar">
       <intent-filter>
 	<action android:name="android.intent.action.MAIN" />
 	<category android:name="android.intent.category.LAUNCHER" />
