--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -2,10 +2,14 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
   package="com.cattailsw.nanidroid"
   android:versionCode="1"
-  android:versionName="1.0">
+  android:versionName="0.1">
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.INTERNET" />
+  	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+  	    
+ 	 <uses-sdk android:minSdkVersion="9" android:targetSdkVersion="9" />
   <application android:label="@string/app_name" 
     android:icon="@drawable/ic_launcher"
-    android:debuggable="true"
     >
     <activity android:name="Nanidroid"
       android:label="@string/app_name"
@@ -28,8 +32,5 @@
     </activity>
     <service android:name=".NanidroidService"></service>
   </application>
-  <uses-permission android:name="android.permission.INTERNET"></uses-permission>
-  <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-
-  <uses-sdk android:minSdkVersion="9" android:targetSdkVersion="9" />
+  
 </manifest>
