--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -13,7 +13,7 @@
     >
     <activity android:name="Nanidroid"
       android:label="@string/app_name"
-      android:launchMode="singleTop"
+      android:launchMode="singleInstance"
       android:theme="@android:style/Theme.NoTitleBar">
       <intent-filter>
 	<action android:name="android.intent.action.MAIN" />
@@ -30,7 +30,7 @@
       </intent-filter>
 
     </activity>
-    <service android:name=".NanidroidService"></service>
+    <service android:name=".NanidroidService" android:exported="false"></service>
   </application>
   
 </manifest>
