--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -3,11 +3,12 @@
   package="com.cattailsw.nanidroid"
   android:versionCode="1"
   android:versionName="0.1">
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
-    <uses-permission android:name="android.permission.INTERNET" />
-  	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+  <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+  <uses-permission android:name="android.permission.INTERNET" />
+  <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+  <uses-permission android:name="com.android.vending.BILLING" />
   	    
- 	 <uses-sdk android:minSdkVersion="9" android:targetSdkVersion="9" />
+  <uses-sdk android:minSdkVersion="9" android:targetSdkVersion="9" />
   <application android:label="@string/app_name" 
     android:icon="@drawable/ic_launcher"
     >
