--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -11,6 +11,7 @@
   <uses-sdk android:minSdkVersion="9" android:targetSdkVersion="9" />
   <application android:label="@string/app_name" 
     android:icon="@drawable/ic_launcher"
+    android:name="CatTailApplication"
     >
     <activity android:name="Nanidroid"
       android:label="@string/app_name"
