--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -8,7 +8,7 @@
   <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
   <uses-permission android:name="com.android.vending.BILLING" />
   	    
-  <uses-sdk android:minSdkVersion="9" android:targetSdkVersion="9" />
+  <uses-sdk android:minSdkVersion="9" android:targetSdkVersion="13" />
   <application android:label="@string/app_name" 
     android:icon="@drawable/ic_launcher"
     android:name="CatTailApplication"
@@ -34,6 +34,10 @@
     </activity>
     <service android:name=".NanidroidService" android:exported="false" />
     <activity android:name=".Preferences" android:theme="@style/NanidroidTheme" />
+
+    <activity android:name="com.google.ads.AdActivity"
+              android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize"/>
+
   </application>
   
 </manifest>
