--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -7,7 +7,9 @@
   <uses-permission android:name="android.permission.INTERNET" />
   <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
   <uses-permission android:name="com.android.vending.BILLING" />
-  	    
+  <uses-permission android:name="android.permission.GET_ACCOUNTS" />
+  <uses-permission android:name="android.permission.USE_CREDENTIALS" />
+	    
   <uses-sdk android:minSdkVersion="9" android:targetSdkVersion="13" />
   <application android:label="@string/app_name" 
     android:icon="@drawable/ic_launcher"
